@@ -1,3 +1,14 @@
+2012-03-27  Alexis Menard  <alexis.menard@openbossa.org>
+
+        Add a perf test which updates the value of an already declared CSS property.
+        https://bugs.webkit.org/show_bug.cgi?id=82321
+
+        Reviewed by Andreas Kling.
+
+        This benchmark update CSS existing properties of the style from JS.
+
+        * CSS/CSSPropertyUpdateValue.html: Added.
+
 2012-03-15  Kentaro Hara  <haraken@chromium.org>
 
         [PerformanceTests] run-perf-tests should output correct units
